--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap");
 
-* {
+body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -9,10 +9,10 @@
 }
 
 .header {
-  /* background-image: url("images/bg-dark.svg"); */
-  /* background-repeat: no-repeat;
-  background-size: cover;*/
-  /* width: 100vw; */
+  background-image: url("images/bg-dark.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* width: 100vw;  */
   height: 100vh;
 }
 
@@ -153,7 +153,7 @@
 }
 
 .interface-img-container {
-  margin-top: 100px;
+  margin-top: 10px;
   overflow: hidden;
 }
 
@@ -274,13 +274,125 @@
 
 .enterprise-section-container {
   width: 1024px;
+  margin: 20px auto;
   padding: 20px;
 }
 
 .enterprise-section-text {
-  /* text-align: left; */
+  margin-top: 100px;
   font-size: 12px;
   color: #18e299;
   font-family: "Geist Mono", monospace;
   font-weight: 600;
+}
+
+.enterprise-section-heading {
+  font-size: 40px;
+  color: #ffffff;
+  font-weight: 600;
+}
+
+.enterprise-section-paragraph {
+  color: #b8b9b9;
+}
+
+.enterprise-section-paragraph-button {
+  margin-top: -30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.enterprise-section-paragraph-button button {
+  padding: 10px 24px;
+  background-color: #ffffff;
+  border: none;
+  color: #000000;
+  font-size: 17px;
+  border-radius: 20px;
+}
+
+.enterprise-section-paragraph-button button:hover {
+  background-color: #dcdcdc;
+  cursor: pointer;
+}
+
+.enterprise-section-card-img {
+  width: 30px;
+}
+
+.enterprise-section-card-heading {
+  color: #ffffff;
+  font-size: 24px;
+}
+
+.enterprise-section-card-paragraph {
+  color: #b8b9b9;
+  line-height: 1.5;
+  letter-spacing: 0.3px;
+}
+
+.enterprise-section-cards {
+  display: flex;
+  margin-top: 60px;
+  align-items: flex-start;
+  gap: 100px;
+}
+
+.enterprise-section-paragraph-image {
+  margin-top: 50px;
+  position: relative;
+}
+
+.enterprise-section-image {
+  border-radius: 24px;
+}
+
+.enterprise-section-image:hover {
+  cursor: pointer; 
+}
+
+.enterprise-section-image-text {
+  position: absolute;
+  color: #ffffff;
+  top: 60px;
+  left: 60px;
+}
+
+.enterprise-section-image-text-text {
+    font-family: "Geist Mono", monospace;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.enterprise-section-image-text-heading {
+  line-height: 1.3;
+  font-size: 24px;
+}
+
+#icon {
+  font-size: 14px;
+}
+
+.image-paragraph-container {
+  display: flex;
+  margin-top: 100px;
+  gap: 60px;
+}
+
+.image-paragraph-container-heading {
+  font-size: 32px;
+}
+
+.image-paragraph-container-info {
+  color: #cdcdcd;
+  letter-spacing: 0.4px;
+  margin-top: -20px;
+}
+
+.trusted-by-logs {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  place-items: center;
+  margin-top: 40px;
 }
